--- a/kubernetes/clusters/kube-prod/vars/kube-prod-vars.yaml
+++ b/kubernetes/clusters/kube-prod/vars/kube-prod-vars.yaml
@@ -4,44 +4,44 @@ metadata:
     namespace: flux-system
     name: kube-prod-vars
 stringData:
-    OP_VERSION: ENC[AES256_GCM,data:LPjG9ucx6g==,iv:bKsHkLcEOHlay7dQG7/JWSjZgsV5MPqj+PbOS8AaX7w=,tag:2/YaRGVwsxwzi7IAzPudcg==,type:str]
-    TALOS_VERSION: ENC[AES256_GCM,data:iy8Jr0JX,iv:No1eMZeuO0UkWa41pERPjlysSfftFKeH4zYhHOko8Zs=,tag:xyVMLcXuG8iSCzk7JSoLAA==,type:str]
-    KUBERNETES_VERSION: ENC[AES256_GCM,data:PyBdytsrpg==,iv:9EebeO6+z1xk6CLCmCocmG+Qdkw6kzLxWxPyUgEs9D0=,tag:8tXNXj20IjFjwcGbuvAwLA==,type:str]
-    CLUSTER_NAME: ENC[AES256_GCM,data:PWzMpNJ23oJo,iv:i1OI/aD/37hokXEltBnitRIEZ1B3C8OfunhpFn50fpg=,tag:Y2MLzCEMH8yZP6AvBKdkWw==,type:str]
-    CONFIG_CILIUM_CLUSTER_ID: ENC[AES256_GCM,data:0A==,iv:EEpeGJrTRD3XtQkIXqnL9ESFmDwnQIf1+UnjEfY+J/E=,tag:IHnH6WcfK/mEfda6cAHPaw==,type:str]
-    CONFIG_CONTROL_CPU: ENC[AES256_GCM,data:0w==,iv:SEhV8DD8RImEiJS1db6lYMUCDGPGLbCpSp/T+dxoYjI=,tag:vs5dfb8TpcT/CC9XFfBrHA==,type:str]
-    CONFIG_CONTROL_MEM: ENC[AES256_GCM,data:zj2zdQ==,iv:9rce6c2HFE77lnTFsrhJwn8yhAflotkrRjhQ0NuYDQk=,tag:eMzGatqX0b06P7nQbOs/9A==,type:str]
-    CONFIG_CONTROL_DISK: ENC[AES256_GCM,data:gfbp,iv:yZwNcF4dIgzNjU1w458vvLjuAAjd/tX8eFBrbTj6rpM=,tag:MKLH6zGHDj+YAIHFfo1nag==,type:str]
-    CONFIG_WORKER_CPU: ENC[AES256_GCM,data:4w==,iv:pcSeUaNItZeTTTJpogd5teUu/p/ua/eDhuqw8AteqB4=,tag:obhKQcv8Bef3XFuQitjWZw==,type:str]
-    CONFIG_WORKER_MEM: ENC[AES256_GCM,data:Je4RAg==,iv:mKMdGYZ2oskEediFUbfyYt6F1ifHqevj/13aL2DRwXA=,tag:JUfE4qj+xwlvGyEx0IdyIg==,type:str]
-    CONFIG_WORKER_DISK: ENC[AES256_GCM,data:sGyJ,iv:gPK+Zt+DA+lfD38tm+iKbmuXXTzJ64vRN3CzTgTsVPE=,tag:CZQgRwfgdQdhYI0PV/iOLQ==,type:str]
-    CONFIG_TZ: ENC[AES256_GCM,data:pmMnoAAJOrkuhdBNqwwJBg==,iv:XfAGn+vnsCjgjC7nYnGXbRHOfY+9g4xXdRrh7K9SoVA=,tag:Z2Z5Rya3mBbh9MTISrey4Q==,type:str]
-    DNS_APP_HUBBLE: ENC[AES256_GCM,data:Z1oKa0aDNXb8v1XI2iQtuccO8Ts6qss=,iv:z1RZEIczfqkqqWV9gCU/IvFSgxnMInCqWaau5HYFVYY=,tag:X1Ro/nUSY0Q0Imu2b0gXOQ==,type:str]
-    DNS_CLUSTER_DN: ENC[AES256_GCM,data:diKXstREczDB6vnAUQ==,iv:CxYZjCUDzJCKzjSZCNGtfHPwkViz7sxsim5BR6nVKd8=,tag:KobwZSgImT4GUT2284bD+w==,type:str]
-    DNS_CONTROLPLANE_FQDN: ENC[AES256_GCM,data:gmWsUOe3v6+S0VxXndqgfKTce1zHLaVumRE=,iv:FTT+ZFugXi9MFFYrww5LaByOLduTnZrxG40SXvV7Ais=,tag:gfwy6oCMvs9+OjJhv69I8Q==,type:str]
-    DNS_HOME_ROOT: ENC[AES256_GCM,data:uaRNHFCrqQ8fu5eSdHB9tg==,iv:Ska8iRPZF3XesTty97hDyQcNQ8I3fdsVTiYpoz0kn+s=,tag:NfBvYaLEo0VsTUYiiN772g==,type:str]
-    DNS_PUBLIC_ROOT: ENC[AES256_GCM,data:2ex7yksPYepZpwZucxVUl+Fk18c7aA==,iv:8qK8pxp0I2iqOwFtJSHQTBGwLUjvB82XE+mnX8MqgoI=,tag:3Gpvvu7z7F2AiUw2hAkn4Q==,type:str]
-    IP_CIDR_K8S_POD: ENC[AES256_GCM,data:krIaHHiyLCLyzbup,iv:tJFyrjiF5dLmsy647Ip3e10Pl52wwfj7LvG2Y77pmZQ=,tag:RSfeRlkqfT//jyMx21WZ3g==,type:str]
-    IP_CIDR_K8S_SVC: ENC[AES256_GCM,data:TPPVjN4htMMcPvOPbA==,iv:3XixXECCc3W0DKuSQdAyPt7AKwuCDP1m0O4sog0XKJg=,tag:Eun1hiVo5G+0WeFswlBLuQ==,type:str]
-    IP_CIDR_K8S_NODE: ENC[AES256_GCM,data:P130w6Boa4k0CDGq,iv:+VjCUEMbroNlHSV729zAffrpnREvwulYwwdKvW+nLOs=,tag:TbGCy3GLk+PUKpczcY/y9A==,type:str]
-    IP_GATEWAY_K8S_NODE: ENC[AES256_GCM,data:eLyza2xN8meP,iv:mICHkVuW+fRcxq7Gp5YLH10DzAtSPgE3wN5v4ZFctEg=,tag:n6T6I1vXtQg/FX1kxnSriQ==,type:str]
-    IP_CLUSTER_VIP: ENC[AES256_GCM,data:XriwM2j4hblp+uY=,iv:pMRYa+ipjZvMDA6ZJn9t/7OvA7JA3WnXuu6b9nhmlR8=,tag:++XfFB4ZzAL3SxuGogbuqA==,type:str]
-    IP_INGRESS_NGINX_INTERNAL: ENC[AES256_GCM,data:p+lD4325opfSfQE=,iv:odJ/v44WEdrXMmCSdEXLrV2UnpYL9AGkcu4GyPbAc1s=,tag:dpD5c/s+rrZzlyVKuYtwhQ==,type:str]
-    IP_INGRESS_NGINX_EXTERNAL: ENC[AES256_GCM,data:nbKis6sGVy256mU=,iv:qLx/HLhfXttRlEbst8Rgxas9kTzkSgGVCYglZVp1fbg=,tag:6W6LItEGkaP/5qHGZ8fIXw==,type:str]
-    IP_CONTROL_01: ENC[AES256_GCM,data:qyJkA+8CBkPAbg==,iv:2H+FNwxmRuVCDJkLBvWiOYWSfxWrh3kvoHrNg/aUpGc=,tag:kGRrBLy6lIpvFhZQOHiKug==,type:str]
-    IP_CONTROL_02: ENC[AES256_GCM,data:9XovAVzr4JIyYA==,iv:4Y6Y7oM1H2jX9AUZs0m8VuQ8BmiohJOiDcFzFZNvMUg=,tag:BQlBghutpET+zgYxGTW3/A==,type:str]
-    IP_CONTROL_03: ENC[AES256_GCM,data:AGhqIf3X2ARrwA==,iv:HFUo72cIkX3khOgFuWZwJ7Vot6gPiR/pxvJz93bXm9c=,tag:NdsWgbtI5Fci4G7cxNu7sw==,type:str]
-    IP_WORKER_01: ENC[AES256_GCM,data:FTrYmdw5Lo4phQ==,iv:q/5JH6UKRA31S0mC8Lm76kOZJemBj3AlREFO1jSECUc=,tag:YqQ5OHb+ph0E3YPX84pevQ==,type:str]
-    IP_HOME_DNS_1: ENC[AES256_GCM,data:EnlsqzSGx9xcPoaA,iv:39X5ePlpuKbg7RdQjwES9i8448jVP2AL2mRlDceoQsE=,tag:zHkmfQw8HlgDgELfgH078g==,type:str]
-    IP_HOME_DNS_2: ENC[AES256_GCM,data:vdokPgq/6D5zI1RN,iv:LQc4DV1A1s00B5HX97i89qwM5AzbcleMZc6xNuEX2ck=,tag:na12MwTyNDmkHNXuzdHusQ==,type:str]
-    IP_NTP_SERVER: ENC[AES256_GCM,data:+H1RbwrQ/kAhg7M=,iv:qLqMmOrhT/AeAduCFq0PK2J0VZ8FgbCYR7sakdTi2og=,tag:qAbLmz4uA/QSTupKcSep6A==,type:str]
-    GOVC_INSECURE: ENC[AES256_GCM,data:QwdtRw==,iv:q1FENvfND2FiUebbb0e5VmbJqvaSDk7Zh5o/pZwGfCo=,tag:0MB+0SrT0X+JdY4QQc9ykg==,type:str]
-    GOVC_LIBRARY: ENC[AES256_GCM,data:2hDrpGo=,iv:VdUnegvPuqOgXH5f84/1dLpFa4ckkXXHolkjp8Lf8mE=,tag:RZ7J+PdfwU6AXoMk5PkJpA==,type:str]
-    GOVC_DATACENTER: ENC[AES256_GCM,data:CxmeZkAsTWTaIKR1WhE6,iv:XbfyQo8YvkZWaV3tjgEGHUrVSBXxIdWYxIJ47FK4X7c=,tag:n04tPX730q6jbLmYmPCgNw==,type:str]
-    GOVC_RESOURCE_POOL: ENC[AES256_GCM,data:vPAW5wc9SOxoPyhaKiKo4UPXP/DeHoM=,iv:3tPzoGf0pkg7V7G8bBFtG2g2cfWnCfqbqd3GG8yIL68=,tag:ogVbVc9sgcO7LtCs3omEXw==,type:str]
-    GOVC_DATASTORE: ENC[AES256_GCM,data:ghcOEMeqhVbTnRvOkg==,iv:1/av0s7efcmFbCfR1zHXyNT9Y5VSGJcfFBselLdgTPw=,tag:GqRq5dSPedP0jzYhbA3pvA==,type:str]
-    GOVC_NETWORK: ENC[AES256_GCM,data:OXoQ,iv:Bibto/r9kxQC2kXnqjrV+bPakobd1A0MTcKUgtj5TgI=,tag:a/F6p8EPX5WfGq90NmK93g==,type:str]
-    ASN_ROUTER: ENC[AES256_GCM,data:ytFL058=,iv:8A4FBzkUhwbqT9ocyaSVzG142aNW5EBWB9m8hpREAWA=,tag:R+WZNwzMJJz9rqn6+0wWYA==,type:str]
+    OP_VERSION: ENC[AES256_GCM,data:nEPHsH49NQ==,iv:0O6nRFUg3iHlprJeyT/ANodItX5lILoc596snbN1keg=,tag:z5cTGDMvNZHdsg8JtHgBbw==,type:str]
+    TALOS_VERSION: ENC[AES256_GCM,data:EkVy65FG,iv:I0JqjEd1HFVPNWktaC08DuYNU1vxi3qrrAtK5UOV9fY=,tag:kcJwPVSAZoWDV+F3em2ehg==,type:str]
+    KUBERNETES_VERSION: ENC[AES256_GCM,data:4n858mvjpw==,iv:eTCfGFRKHx2uXFK85kug9GGSqRJmElpHtAeVfHLlAP8=,tag:1jzPnQFZoBOF21FKlE5RYQ==,type:str]
+    CLUSTER_NAME: ENC[AES256_GCM,data:7nFMkb7isJ04,iv:TGmIBfio8H8HAGtmkIhdUf3karVstqSQQJqqdtxynFo=,tag:n31NQWmWbKveucozQMKZeA==,type:str]
+    CONFIG_CILIUM_CLUSTER_ID: ENC[AES256_GCM,data:0g==,iv:PqXk/mMP5FIBYK2zDaJ1rtCXMAygbtJVn9YJgPf57Fw=,tag:1cAncrKOTLFzf69AieWVgg==,type:str]
+    CONFIG_CONTROL_CPU: ENC[AES256_GCM,data:PQ==,iv:X9W3byT6t73i+A1u/w10yuVTT1hbqJBFqbTEG+c8Xuw=,tag:pzGRRN7am21nwgSLhtTn4A==,type:str]
+    CONFIG_CONTROL_MEM: ENC[AES256_GCM,data:w/HG4A==,iv:mPvk/vTgmmLZBDpvMI6KDmzk51SLqcqaHOIUYZzG6f4=,tag:l3rE9I6MWsfOe15MxyVJlg==,type:str]
+    CONFIG_CONTROL_DISK: ENC[AES256_GCM,data:7qer,iv:TRLCnq6qDKnEukwU/X5gQt+nVA5NMa63iyRB9JzPp0A=,tag:c74GLG/tmcuiCsaDAGZZig==,type:str]
+    CONFIG_WORKER_CPU: ENC[AES256_GCM,data:JA==,iv:7fpUZLIvRHA0SNEgKGTkLgvEqbl1FgKXoR4aOzdPPvk=,tag:j47nFekqjO4e8Sott/6sIQ==,type:str]
+    CONFIG_WORKER_MEM: ENC[AES256_GCM,data:4r6WpQ==,iv:ibJT80YT39/KXiCBrWhFLQLEQOLw9H7Crjm7hcWJ6HQ=,tag:2N+v/z4dEBM7exRxyqkWvQ==,type:str]
+    CONFIG_WORKER_DISK: ENC[AES256_GCM,data:A5Yv,iv:U910Mmuw2kYfTYlC4CZQOBz14fdto9hyRz9IMXbrEIY=,tag:9yKoPMHuy3R0ognq+u5o7A==,type:str]
+    CONFIG_TZ: ENC[AES256_GCM,data:KI3EEYPcLc/k9RMDq94h8g==,iv:Rn0bnvCh1N45mDCoNNNhlGwIptWG8c3MNcUH9RZzb9U=,tag:Fr756wRrZmzcOZvV75JjFQ==,type:str]
+    DNS_APP_HUBBLE: ENC[AES256_GCM,data:yJ+IKzbgMbigpj4TFsi2oOfYCe0pVxY=,iv:olKrl871WHo8ErWqg9SAxoV165AGwrG5rrxO3tK3Cb4=,tag:wzjrRxSfrNTY22blJt+zGw==,type:str]
+    DNS_CLUSTER_DN: ENC[AES256_GCM,data:+lDpzBeBeVyLofEycA==,iv:bkKc/m94xSyzsMeCDVhARRfF8LuwNI1TOsZd+YXFAqs=,tag:LFro5FLB8S5qwdCJaTs2vg==,type:str]
+    DNS_CONTROLPLANE_FQDN: ENC[AES256_GCM,data:HAaQLNlFO6/9C08jmuYH9c21ht2YbPPIEA4=,iv:pzMUp3Nej/WJ0aH3XE2r29AYTLKwYFY64ETTSn7MEVg=,tag:O5bcIv4cASCyHEXZLxZDZw==,type:str]
+    DNS_HOME_ROOT: ENC[AES256_GCM,data:JhpR/10JMLPHRPDiUDBdmw==,iv:6VYTvps/h71yE+8DsFR/RfpjqkpF5DaJAy2BqdZZpgg=,tag:vAo6UiBlFsTaVYegcRWUlg==,type:str]
+    DNS_PUBLIC_ROOT: ENC[AES256_GCM,data:azJH26rShIGxUx+UkiQBE3a0zAZUvA==,iv:moYzInLMcBV6uVFB36gqU3Gs8BIvcb/hWZKnEuG8q1w=,tag:KYYh991/no9qGkatXWngeA==,type:str]
+    IP_CIDR_K8S_POD: ENC[AES256_GCM,data:htwA4gBp6nBjKPyd,iv:8bQKuxmxX4Nj6uxwe2XTU5zopDL1Uoby2/83nYqymac=,tag:CcaBsWUO3S6qM8hzrZJEnA==,type:str]
+    IP_CIDR_K8S_SVC: ENC[AES256_GCM,data:h3/tiznwwrrvBTVRTg==,iv:AaR/Yo+rDDkieVaEal0ZX46BmyUwKgCqym6BLg18pvg=,tag:ORZHWBtad3e+/UWidZizPQ==,type:str]
+    IP_CIDR_K8S_NODE: ENC[AES256_GCM,data:inUNPJPKs4EfaO9n,iv:yjfQX2deNYqUs5JH3esVNYuH1Sl5rlpB1X8waxgZPag=,tag:cJj/99VpwRDE+SFnNnTAWg==,type:str]
+    IP_GATEWAY_K8S_NODE: ENC[AES256_GCM,data:MBoFLM9GpaHG,iv:W0oVYvOpZAae1O0l8NJY3Sog35Ftr/8KbxSx9xGMMW8=,tag:FrGYwj8TEt4tTslYDAgvVA==,type:str]
+    IP_CLUSTER_VIP: ENC[AES256_GCM,data:bLDllkVbON56cWM=,iv:Bo9Z9CBHHV45ik51W6l9UtyFeO57MtoOHGMyiuLcZew=,tag:6lhLDCZHFIq6YId88vzIPA==,type:str]
+    IP_INGRESS_NGINX_INTERNAL: ENC[AES256_GCM,data:X+V+bGofK/ChMmc=,iv:0EzWbxu5bCiyfpvnJ5Ivuas49P54WfsBt0bFVoiKG8U=,tag:L2GvSFuhe5f4R2H2ObbhSA==,type:str]
+    IP_INGRESS_NGINX_EXTERNAL: ENC[AES256_GCM,data:08cCqkpwabu8l3w=,iv:E7QnteYvXOEuaWxooCscCvuIjtTNiBXo+eV5tSbQ5Dk=,tag:EklbfkHg+Epy6ixoxOZePQ==,type:str]
+    IP_CONTROL_01: ENC[AES256_GCM,data:NeIyNgXH+4x1Ng==,iv:MTq0dr+eDt6nlUfCCe7avAh8iZiI+VnUsbnzfZUsxYs=,tag:vyDn8FMHlrLOddc2j3yGHw==,type:str]
+    IP_CONTROL_02: ENC[AES256_GCM,data:FQeHz/tRzA22uQ==,iv:VqJMegH/8Ee1GpqW8w5bVshAQ+A9rlRF46YnZic7gc0=,tag:Z/tlyLFoIcFJm47zq+/cGA==,type:str]
+    IP_CONTROL_03: ENC[AES256_GCM,data:D5Y3ju7aKi3bLQ==,iv:Q+QxtjpRBlovkX2UZ1HHwTyBussaCHpIBAV39Ju9vaM=,tag:hYyIjJSrQEP1mce4SiGAPA==,type:str]
+    IP_WORKER_01: ENC[AES256_GCM,data:VrdkBJqDWF3OxA==,iv:6JnnLwGvnqsFzZmgubQJIkmfhEGRfvRlmHudyaBkeQY=,tag:Tjyv1Wva9uzPnKA4j4h3hQ==,type:str]
+    IP_HOME_DNS_1: ENC[AES256_GCM,data:tCnPKERsm0uOsojZ,iv:nLh4uWe9+oi7+IGpdFpYDvkNpK7U1mBTmaX7nug+01w=,tag:Ldj8Dqr8Yv6X1M0pPmy+rg==,type:str]
+    IP_HOME_DNS_2: ENC[AES256_GCM,data:M2MRlqoBrm39Yxxp,iv:gAIu4/zYvSvTuQL08Gdr0otIw7gYQ522lVmzuk54UCg=,tag:iMtv37kDu7OFVDZHT56Gsg==,type:str]
+    IP_NTP_SERVER: ENC[AES256_GCM,data:0QSukZGTYu/I1Fc=,iv:1WaiVFhYL9kqzq42a26cW85X0m3CcfeM4hn9TRoMsm8=,tag:GR+RPmC+EXowDO/b2mFnKA==,type:str]
+    GOVC_INSECURE: ENC[AES256_GCM,data:9y6llg==,iv:anF+g9yu6Ab6OadDk48PBxGBT21RadIejN4ubHeL18I=,tag:MjvBO0leFrJrdXQOFmTaBg==,type:str]
+    GOVC_LIBRARY: ENC[AES256_GCM,data:+mRcDgk=,iv:v3zgeswW5ozc+3iKrQbgQJLJXQIehVdiAknWtZ/8esg=,tag:xQpAS2JCSkUshNu1C/KdCQ==,type:str]
+    GOVC_DATACENTER: ENC[AES256_GCM,data:RByMneaeJnNH43uSku9+,iv:wJ0NHh+/pIAborBKUGZBDbi6wnvY1ThEqiduS0m/+3w=,tag:78eaI6CK2q2WSqIIi6NsbQ==,type:str]
+    GOVC_RESOURCE_POOL: ENC[AES256_GCM,data:0f7mJDOX5ectVBb1E9dZmETgpUaOSN4=,iv:carCX7zNRljAfWxjZy9gsvQVRffKNxIWnfn18b4CuwQ=,tag:Z470SOiz37VPQtJ+sh/chA==,type:str]
+    GOVC_DATASTORE: ENC[AES256_GCM,data:pfe3A1lMsxnTFId9Vg==,iv:yGO5rreHj1V/ZOQMlW1GWvDfWooiIat2ctM50jvunzk=,tag:0qudGZqXbFasIN7BmMzo2A==,type:str]
+    GOVC_NETWORK: ENC[AES256_GCM,data:kh/N,iv:GQ/mVx79MT8Tm1npN6BofVu1J4rFJF84ngBSa2/SfKI=,tag:jmKaFZaapBGFT7NNXEDarg==,type:str]
+    ASN_ROUTER: ENC[AES256_GCM,data:7u1Wh+0=,iv:OXNUopi+LXjsDHt86tA2rp/l3i5LB9UfBtbQJw3JyBM=,tag:DLOfuNumcnoz31EZeN+C4A==,type:str]
 sops:
     kms: []
     gcp_kms: []
@@ -51,14 +51,14 @@ sops:
         - recipient: age1skatly42g7vng3twta22kdlvzg98p3p5zk7rzn285pncxkzzu3usvp7gvh
           enc: |
             -----BEGIN AGE ENCRYPTED FILE-----
-            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBJUFFZK1V3aTU2S3B6TWhp
-            STJzRGg5ZWxLVTZqb1dHRjYzOEsyOEFBTEVBCkJVR1h6SUFyZ2hSYWw3bkdkeE9E
-            L05FUXBTdkhlVWpNdnpuVi9DVktyL2cKLS0tIFhTMVRHUWRnbWZTYU1RZEhBZWta
-            Nm11T2lkMHRoYUY1YkFGWklIUVQ5TTAKHC/YtVoTaKrtDp5dzr4DQEheWiH2w5KJ
-            Iyo4NENMmp55gH9GYqXO9Dpv8jOAkGBJICGP8W9Jnn3LOiXhbXx8Mg==
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBOY0h1d1M2NFhpZkZCSUZv
+            NDRmazF4eW82M3JVSTlkZDhQYTI2UXpqV2owCjRTU2I3dmhoZ1lJVmlHOWd4bnVs
+            V1o2R0t1dTA5bHBHVkpXeFM4T2lyakkKLS0tIGJQOFRvVEhIeUlxTmtKRE5lWncw
+            elZDY29TUG1GbkJmWFRVSVZxK2lQV2MKKeFtRWfGrawZCwcwvghv6/uFaCJX28GR
+            NtB0EhrDFMK/7Nhj8CXfpSSWVWtnFfVICALAhnZYQle3Oyc3F3A0jA==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2023-12-15T20:35:13Z"
-    mac: ENC[AES256_GCM,data:5FRAelaVEv8KRsIhSffXrxG8Wc21vBUzmQ2lcAw5A+X1nINlu2CsiBXp+QmEDPBFQeA3ME0OysWHLCpeErnLa3GncrrUQJj8TbGNajwIUdmzR2JNbvQhLvkVjoEjkflnQaYiU6Ev5SvDSnoBqDLLaQXO0zNZdz8je1uILu2HPZ8=,iv:Zac13P9hCf44COxEa612ekj3ceoWl0qQDB65z8PbvZI=,tag:xDN3eo55cfz9JXKeTubrFw==,type:str]
+    lastmodified: "2023-12-16T04:29:29Z"
+    mac: ENC[AES256_GCM,data:3D07EaemNKgknkRd/8O/uASvL9BIL99kZfnValpEde/EqT9nj9q/qDWFni4BHM8lBJzzUMjHbXS/JEyPimuhFLCyunpVp0RqfqQTnSJ1bodR/PeqjbsJAym1Vdg5/zsZRM6kvR0fctHQwyQgNVIYZZevZpT5P/qT3LuL/S/aSho=,iv:W9qbNFTMnY6lnJx6hGiTfwhC2CQtT7EU83L6OF1qjqc=,tag:dcTlV0vwRpwXwz/YaGk/kw==,type:str]
     pgp: []
     encrypted_regex: ^(data|stringData)$
     version: 3.8.1
