UPdate cloudflared to creds file

--- a/.github/taskfiles/secrets.tasks.yaml
+++ b/.github/taskfiles/secrets.tasks.yaml
@@ -47,10 +47,10 @@ tasks:
   # Injection of decrypted secrets directly into environment variables for command execution
   inject-command:
     vars:
-      CMD: '{{ or .CMD (fail "\n\nERROR ->  Missing CMD task variable!") }}'
+      CLI_ARGS: '{{ or .CLI_ARGS (fail "\n\nERROR ->  Missing -- <command> variable!") }}'
     deps: [op-add-account, op-sign-in]
     cmds:
-      - sops exec-env {{.VARS_FILE}} 'sops exec-env {{.SECRETS_FILE}} "op run -- {{.CMD}}"'
+      - sops exec-env {{.VARS_FILE}} 'sops exec-env {{.SECRETS_FILE}} "unset 'OP_CONNECT_HOST' && unset 'OP_CONNECT_TOKEN' && op run -- {{.CLI_ARGS}}"'
 
   # Cleanup unencrypted temp .env files
   cleanup-secrets:
