--- a/kubernetes/apps/network-system/cloudflared/app/externalsecret.yaml
+++ b/kubernetes/apps/network-system/cloudflared/app/externalsecret.yaml
@@ -14,7 +14,13 @@ spec:
     template:
       engineVersion: v2
       data:
-        CLOUDFLARE_TUNNEL_TOKEN: "{{ .CLOUDFLARE_TUNNEL_TOKEN }}"
+        CLOUDFLARE_TUNNEL_ID: "{{ .CLOUDFLARE_TUNNEL_ID }}"
+        credentials.json: |
+          {
+            "AccountTag": "{{ .CLOUDFLARE_ACCOUNT_ID }}",
+            "TunnelID": "{{ .CLOUDFLARE_TUNNEL_ID }}",
+            "TunnelSecret": "{{ .CLOUDFLARE_TUNNEL_SECRET }}"
+          }
   dataFrom:
     - extract:
         key: cloudflare
