--- a/kubernetes/apps/network-system/cloudflared/app/hr.yaml
+++ b/kubernetes/apps/network-system/cloudflared/app/hr.yaml
@@ -29,17 +29,18 @@ spec:
               - --config
               - /etc/cloudflared/config/config.yaml
               - run
-              - "--token=$(TUNNEL_TOKEN)"
+              - $(TUNNEL_ID)
             env:
               NO_AUTOUPDATE: true
               TUNNEL_METRICS: 0.0.0.0:9090
               TUNNEL_TRANSPORT_PROTOCOL: quic
               TUNNEL_POST_QUANTUM: true
-              TUNNEL_TOKEN:
+              TUNNEL_CRED_FILE: /etc/cloudflared/creds/credentials.json
+              TUNNEL_ID:
                 valueFrom:
                   secretKeyRef:
                     name: cloudflared-secret
-                    key: CLOUDFLARE_TUNNEL_TOKEN
+                    key: CLOUDFLARE_TUNNEL_ID
             probes:
               liveness: &probes
                 enabled: true
@@ -63,6 +64,13 @@ spec:
         globalMounts:
           - path: /etc/cloudflared/config/config.yaml
             subPath: config.yaml
+            readOnly: true
+      creds:
+        type: secret
+        name: cloudflared-secret
+        globalMounts:
+          - path: /etc/cloudflared/creds/credentials.json
+            subPath: credentials.json
             readOnly: true
     service:
       main:
