--- a/kubernetes/clusters/kube-prod/flux/kustomization.yaml
+++ b/kubernetes/clusters/kube-prod/flux/kustomization.yaml
@@ -10,3 +10,4 @@ resources:
   - ../../../apps/ingress-nginx/
   - ../../../apps/security-system/
   - ../../../apps/network-system/
+  - ../../../apps/cert-manager/
