--- a/kubernetes/apps/ingress-nginx/ks.yaml
+++ b/kubernetes/apps/ingress-nginx/ks.yaml
@@ -2,7 +2,7 @@
 apiVersion: kustomize.toolkit.fluxcd.io/v1
 kind: Kustomization
 metadata:
-  name: 1-core-ingress-nginx-app
+  name: apps-ingress-nginx
   namespace: flux-system
   labels:
     prune.flux.home.arpa/disabled: "true"
