--- a/kubernetes/apps/cert-manager/ks.yaml
+++ b/kubernetes/apps/cert-manager/ks.yaml
@@ -7,6 +7,7 @@ metadata:
 spec:
   targetNamespace: cert-manager
   path: ./kubernetes/apps/cert-manager/app
+  dependsOn: []
 ---
 apiVersion: kustomize.toolkit.fluxcd.io/v1
 kind: Kustomization
