--- a/kubernetes/apps/ingress-nginx/ks.yaml
+++ b/kubernetes/apps/ingress-nginx/ks.yaml
@@ -7,5 +7,6 @@ metadata:
   labels:
     prune.flux.home.arpa/disabled: "true"
 spec:
+  targetNamespace: ingress-nginx
   path: ./kubernetes/apps/ingress-nginx/app
   dependsOn: []
