Update ingress cert

--- a/kubernetes/apps/ingress-nginx/app/certificate.yaml
+++ b/kubernetes/apps/ingress-nginx/app/certificate.yaml
@@ -4,7 +4,7 @@ kind: Certificate
 metadata:
   name: wildcard
 spec:
-  secretName: wildcard-tls-${DNS_PUBLIC_ROOT}
+  secretName: wildcard-tls
   issuerRef:
     name: letsencrypt-staging
     kind: ClusterIssuer
